Added IntelliJ IDEA project files to avoid setup issues for students.