@@ -667,7 +667,7 @@ public final class TransactionUtil implements Status {
         el.add(0, e);
 
         if (Debug.infoOn()) {
-            Long curThreadId = Thread.currentThread().getId();
+            Long curThreadId = Thread.currentThread().threadId();
             List<Exception> ctEl = allThreadsTransactionBeginStackSave.get(curThreadId);
             if (ctEl == null) {
                 ctEl = new LinkedList<>();
@@ -681,7 +681,7 @@ public final class TransactionUtil implements Status {
     private static Exception popTransactionBeginStackSave() {
         if (Debug.infoOn()) {
             // do the unofficial all threads Map one first, and don't do a real return
-            Long curThreadId = Thread.currentThread().getId();
+            Long curThreadId = Thread.currentThread().threadId();
             List<Exception> ctEl = allThreadsTransactionBeginStackSave.get(curThreadId);
             if (UtilValidate.isNotEmpty(ctEl)) {
                 // REFACTOR: Use sequenced collection method instead
@@ -761,14 +761,14 @@ public final class TransactionUtil implements Status {
         }
         transactionBeginStack.set(newExc);
         if (Debug.infoOn()) {
-            Long curThreadId = Thread.currentThread().getId();
+            Long curThreadId = Thread.currentThread().threadId();
             allThreadsTransactionBeginStack.put(curThreadId, newExc);
         }
     }
 
     private static Exception clearTransactionBeginStack() {
         if (Debug.infoOn()) {
-            Long curThreadId = Thread.currentThread().getId();
+            Long curThreadId = Thread.currentThread().threadId();
             allThreadsTransactionBeginStack.remove(curThreadId);
         }
         Exception e = transactionBeginStack.get();
